# stock-prediction

./: .gitignore  README.md  WORKFLOW.md  check_kafka_partitions.sh  cleanup_database.sh  config.py  docker-compose.yml  generate_evaluation_results.py  init_db.py  install_airflow.sh  pytest.ini  requirements.txt  setup.sh  setup_kafka_topic.py  start_batch_demo.sh  start_database.sh  start_streaming_demo.sh  stock_prediction_dag.py  stop_batch_demo.sh  stop_streaming_demo.sh  train_local.py
backend/: README.md  alembic.ini  env.example  pyproject.toml
backend/docker/: .gitkeep  Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.prod.yml  init-airflow-db.sql
backend/migrations/: env.py
backend/migrations/versions/: 9ae522b394d5_initial_schema.py  b6fda344785a_add_partial_index_for_null_experiment_.py  c8fa32d89b1e_make_experiment_artifact_run_id_nullable.py
backend/scripts/: __init__.py  constant.py  generate_evaluation_results.py  seed_mock_model_metrics.py  seed_mock_prediction_points.py  seed_mock_predictions.py  seed_mock_prices.py  seed_stock_prices.py  seed_stocks.py  seed_users.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/v1/: __init__.py  auth.py  pipelines.py  predictions.py  stocks.py  training.py
backend/src/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
backend/src/app/db/: __init__.py  base.py  session.py
backend/src/app/db/models/: __init__.py  pipelines.py  stocks.py  training.py  users.py
backend/src/app/integrations/: __init__.py  airflow_client.py  queue.py  storage_s3.py
backend/src/app/schemas/: __init__.py  auth.py  pipelines.py  predictions.py  stocks.py  training.py
backend/src/app/services/: __init__.py  data_fetcher.py  email_service.py  model_trainer.py  predictions.py  stock_service.py  user_stocks.py
backend/src/worker/: __init__.py  main.py
backend/src/worker/tasks/: __init__.py  experiments.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_stocks.py
backend/tests/services/: __init__.py  test_data_fetcher.py  test_model_trainer.py
dags/: vn30_data_crawler.py  vn30_model_training.py
dags/batch/: vn30_data_crawler.py  vn30_model_training.py
dags/streaming/: kafka_health_monitor.py  (+2 more)
docs/: DATABASE_SCHEMA.md  DIAGRAMS.md  HOW_TO_GENERATE_EVALUATION_RESULTS.md  QUICK_REFERENCE_EVALUATION.md  REPORT.md  SPECS.md  TASKS.md
modules/: __init__.py  data_fetcher.py  database.py  email_notifier.py  kafka_consumer.py  kafka_producer.py  model_trainer.py  model_trainer_sklearn.py  orchestrator.py  simulated_data_generator.py  streaming_utils.py  tick_aggregator.py
tests/: README.md  __init__.py  test_data_fetcher.py  test_data_fetcher_integration.py  test_model_trainer.py  test_model_trainer_integration.py  test_model_trainer_sklearn.py
(+32 files in other folders)
