[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-prediction-backend"
version = "1.0.0"
description = "VN30 Stock Price Prediction System - Backend API and Worker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Group 2 - Intelligent Systems"}
]
keywords = ["stock-prediction", "machine-learning", "fastapi", "airflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=1.4.49,<2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Task Queue
    "rq>=1.15.0",
    "redis>=5.0.0",
    
    # Data Processing
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.2",
    
    # Visualization
    "matplotlib>=3.7.2",
    
    # Email
    "sendgrid>=6.10.0",
    
    # HTTP Client
    "httpx>=0.25.0",
    
    # Date/Time
    "pendulum>=3.0.0",
    
    # AWS S3 (optional, for artifact storage)
    "boto3>=1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

airflow = [
    "apache-airflow>=2.8.0",
]

[project.scripts]
stock-api = "app.main:run_server"
stock-worker = "worker.main:run_worker"

[project.urls]
Homepage = "https://github.com/your-org/stock-prediction"
Documentation = "https://github.com/your-org/stock-prediction/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: Integration tests",
    "slow: Slow-running tests",
    "unit: Fast unit tests",
]

